--- a/less/components/team.less
+++ b/less/components/team.less
@@ -21,6 +21,10 @@
             width: 100%;
         }
 
+        @media @tablet {
+            width: 75%;
+        }
+
         &-photo {
             width: 100px;
             height: 100px;
